--- a/js methods loops/index.html
+++ b/js methods loops/index.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <body>
 <h2>JavaScript Objects and its Properties</h2>
 <p>There are two different ways to access an object property</p>
 <p>You can use property or ["property"].</p>
 <p id="demo"></p>
+<p id="method"></p>
 
 <script>
 // Create an object:
+var value = math.random()
 var person = {
     firstName: "I",
     age: 20
@@ -15,7 +17,32 @@ var person = {
 
 // Display some data from the object:
 document.getElementById("demo").innerHTML = person.firstName + " am " + person.age + " years old";
+document.getElementById("method").innerHTML = "random number is"+value 
 </script>
 
 </body>
-</html>
+</html> -->
+<!-- <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Introduction to Objects in Javascript</title>
+    </head>
+    <body>
+        <p id="greet"></p>
+        <p id="method"></p>
+        <script>
+            var value=Math.random()
+
+            var person={
+                firstName:"Enrico",
+                lastName:"Efendi",
+                age:"14",
+            };
+
+            document.getElementById("greet").innerHTML = "My name is " + person.firstName + " " + person.lastName + " and I am " + person.age + " years old";
+            document.getElementById("method").innerHTML = "Random Number Generator: " + value ;
+        </script>
+    </body>
+</html> -->
