--- a/brief in js typeconversion,error handle,regular expression/index.html
+++ b/brief in js typeconversion,error handle,regular expression/index.html
@@ -17,7 +17,7 @@
         }
         catch(err) {
             document.getElementById("error_message"). innerHTML = 
-            err.messge;
+            err
         }
     </script>
 </body>
