--- a/navigation bar/index.html
+++ b/navigation bar/index.html
@@ -25,11 +25,11 @@
   <div class="container navigation pt-3">
     <div class="row">
       <div class="col-6 d-flex justify-content-start align-items-center">
-        <i class="fa fa-spinner fa-spin fa-3x fa-fw text-warning pb-3"></i>
-        <h5 class="d-inline pl-2 text-white">CODINGAL</h5>
+        <!-- <i class="fa fa-spinner fa-spin fa-3x fa-fw text-warning pb-3"></i> -->
+        <h5 class="pl-2 text-white">CODINGAL</h5>
       </div>
       <div class="col-6 pt-2">
-        <div class="row text-center p-0 d-flex justify-content-end align-items-center">
+        <div class="row text-center  d-flex justify-content-end align-items-center">
           <div class="col-3">
             <a href="#about" class="text-white navigation-link">About</a>
           </div>
